apps/rhf-mui-docs/src/app/v4/components/mui/RHFNativeSelect/page.mdx
import { DocsPage, PropsTable, Callout, ComponentSourceLink } from '@/components/docs';
import { componentMetadata, componentProps } from '@/constants';

export const metadata = componentMetadata.RHFNativeSelect;

export default function Layout({ children }) {
  return <DocsPage>{children}</DocsPage>;
}

# RHFNativeSelect

**RHFNativeSelect** extends [NativeSelect](https://v7.mui.com/material-ui/react-select/#native-select)
and is ideal for mobile-friendly form designs. Similar to [RHFSelect](/v4/components/mui/RHFSelect),
it supports both arrays and arrays of objects for flexible option rendering.

<Callout type="tip">
If the number of options **exceeds 20**, consider using [RHFAutocomplete](/v4/components/mui/RHFAutocomplete)
or [RHFMultiAutocomplete](/v4/components/mui/RHFMultiAutocomplete) for better searchability, improved keyboard
navigation, and overall performance.
</Callout>

## Usage

```tsx
import RHFNativeSelect, { RHFNativeSelectProps } from '@nish1896/rhf-mui-components/mui/native-select';
```

Here is a basic example with an array of strings:

```tsx
<RHFNativeSelect
  fieldName="color"
  control={control}
  options={['Red', 'Blue', 'Orange']}
/>
```

And here is an example with an array of objects:

```tsx
<RHFNativeSelect
  fieldName="country"
  control={control}
  options={[
    { code: 'AUS', country: 'Australia' },
    { code: 'IN', country: 'India' },
    { code: 'UAE', country: 'United Arab Emirates' },
  ]}
  labelKey="country"
  valueKey="code"
/>
```

<Callout type="warning">
When using an array of objects for options, both `labelKey` and `valueKey`
are required. If either is missing, an error will be thrown.
</Callout>

## Examples
- [Native Select](https://v7.mui.com/material-ui/react-select/#native-select)

## API
The `RHFNativeSelectProps` interface extends [NativeSelectProps](https://v7.mui.com/material-ui/api/native-select/)
and accepts the following additional props.
Props marked with <strong style={{ color: 'var(--mui-palette-error-main)' }}>{'*'}</strong> are required.

<PropsTable
  rows={componentProps.RHFNativeSelect}
  docsVersion={4}
  muiVersion={7}
  v4AndAbove
/>

## Source Code

<ComponentSourceLink
  path="mui/native-select"
  docsVersion={4}
/>
